Add Lesson 3 and 4: Read the values in the form and define whether it is a number or a character string

--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@ button:hover {
     border-color: #73266e;
 }
 
+span {
+    color: #ad2222;
+    font-weight: bold;
+}
+
 #Lesson2 {
     & form input {
         width: 4.8rem;
